[package]
name = "yaanhyy-yamux"
version = "0.1.0"
authors = ["yaanhyy <yaanhyy@gmail.com>"]
license = "Apache-2.0 OR MIT"
description = "Multiplexer over reliable, ordered connections"
keywords = ["network", "protocol"]
categories = ["network-programming"]
repository = "https://github.com/yaanhyy/yaanhyy-yamux"
readme = "README.md"
edition = "2018"

[dependencies]
futures = { version = "0.3.5" }
log = "0.4.8"
rand = "0.7.2"
async-std = "1"
yaanhyy-secio = { rev = '28ed08d58f2cc303b55cca99e2e5df9a6d734c4e', git = "https://github.com/yaanhyy/yaanhyy-secio.git"}
pin-utils ="*"