[package]
name = "yaanhyy-yamux"
version = "0.1.0"
authors = ["yaanhyy <yaanhyy@gmail.com>"]
license = "Apache-2.0 OR MIT"
description = "Multiplexer over reliable, ordered connections"
keywords = ["network", "protocol"]
categories = ["network-programming"]
repository = "https://github.com/yaanhyy/yaanhyy-yamux"
readme = "README.md"
edition = "2018"

[dependencies]
futures = { version = "0.3.5" }
log = "0.4.8"
rand = "0.7.2"
async-std = "1"
yaanhyy-secio = { rev = '16421be27a37337526110c7f739b1c91d8414988', git = "https://github.com/yaanhyy/yaanhyy-secio.git"}
pin-utils ="*"