[package]
name = "yaanhyy-yamux"
version = "0.1.0"
authors = ["yaanhyy <yaanhyy@gmail.com>"]
license = "Apache-2.0 OR MIT"
description = "Multiplexer over reliable, ordered connections"
keywords = ["network", "protocol"]
categories = ["network-programming"]
repository = "https://github.com/yaanhyy/yaanhyy-yamux"
readme = "README.md"
edition = "2018"

[dependencies]
futures = { version = "0.3.5" }
log = "0.4.8"
rand = "0.7.2"
async-std = "1"
yaanhyy-secio = { rev = '1a2aeff0358c9e6e6cb79730a75233aa4209a425', git = "https://github.com/yaanhyy/yaanhyy-secio.git"}
pin-utils ="*"